# aiaget-platform

./: .dockerignore  .env.example  .env.production.example  .gitignore  .mailmap  .prettierignore  .prettierrc.json  AI_BUILD_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/agent-runtime/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/agent-runtime/app/: __init__.py  main.py
apps/agent-runtime/app/core/: settings.py
apps/agent-runtime/app/runtime/: __init__.py  contracts.py  execution.py  helpers.py  team_execution.py
apps/agent-runtime/app/workflows/: __init__.py  agent_team_runs.py  channel_release_automation.py  channel_release_self_healing.py  knowledge_tasks.py  plugin_hooks.py  plugin_rollbacks.py  worker.py
apps/agent-runtime/tests/: test_model_adapters.py  test_runtime_streaming.py
apps/control-api/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json
apps/web/: Dockerfile  components.json  next.config.ts  package.json  (+1 more)
deploy/: docker-compose.production.yml  docker-compose.yml
scripts/: README.md  postgres_comments.sql  production-dependency-probe.mjs  production-smoke.mjs  run-control-api-tests.mjs  validate-external-sdk-package.mjs  validate-production-env.mjs  verify-observability-template.mjs  verify-production-runbook.mjs  verify-trace-propagation.mjs
(+2527 files in other folders)
